crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__dict__named_expression_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/dict/named_expression_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..84,
        body: [
            Expr(
                StmtExpr {
                    range: 55..77,
                    value: Dict(
                        ExprDict {
                            range: 55..77,
                            items: [
                                KeyValuePair {
                                    key: Named(
                                        ExprNamed {
                                            range: 56..62,
                                            target: Name(
                                                ExprName {
                                                    range: 56..57,
                                                    id: "x",
                                                    ctx: Store,
                                                },
                                            ),
                                            value: NumberLiteral(
                                                ExprNumberLiteral {
                                                    range: 61..62,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                    value: Name(
                                        ExprName {
                                            range: 64..65,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                },
                                KeyValuePair {
                                    key: Name(
                                        ExprName {
                                            range: 67..68,
                                            id: "z",
                                            ctx: Load,
                                        },
                                    ),
                                    value: Name(
                                        ExprName {
                                            range: 68..68,
                                            id: "",
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                                KeyValuePair {
                                    key: NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 72..73,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                    value: Name(
                                        ExprName {
                                            range: 75..76,
                                            id: "a",
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 79..84,
                    value: BinOp(
                        ExprBinOp {
                            range: 79..84,
                            left: Name(
                                ExprName {
                                    range: 79..80,
                                    id: "x",
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    range: 83..84,
                                    id: "y",
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Unparenthesized named expression not allowed in key
2 | 
3 | {x := 1: y, z := 2: a}
  |  ^^^^^^ Syntax Error: Unparenthesized named expression cannot be used here
4 | 
5 | x + y
  |


  |
1 | # Unparenthesized named expression not allowed in key
2 | 
3 | {x := 1: y, z := 2: a}
  |               ^^ Syntax Error: Expected ':', found ':='
4 | 
5 | x + y
  |
